--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>React-justgage dev page</title>
     </head>
     <body>
-     <div id='root'></div>
+     <div id='root' style="height: 300px"></div>
      <script src="/static/bundle.js"></script>
     </body>
 </html>
