--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
      <div id='root' style="height: 300px"></div>
-     <script src="/bundle.js"></script>
+     <script src="/react-svg-gauge/bundle.js"></script>
     </body>
 </html>
